# EGASA-Data-Mart-Bulletin-App

./: .gitignore  README.md  config.yml  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
app/: __init__.py  data_access.py  main.py  ui_components.py
data_landing/: Control Hidrológico.xlsx  PRODUCCION EGASA DESDE 2010 (NOV2025).xlsx  PRODUCCIÓN DE ENERGÍA_ABRIL 2025.xlsx  PRODUCCIÓN DE ENERGÍA_AGOSTO 2025.xlsx  PRODUCCIÓN DE ENERGÍA_ENERO 2025.xlsx  PRODUCCIÓN DE ENERGÍA_FEBRERO 2025.xlsx  PRODUCCIÓN DE ENERGÍA_JULIO 2025.xlsx  PRODUCCIÓN DE ENERGÍA_JUNIO 2025.xlsx  PRODUCCIÓN DE ENERGÍA_MARZO 2025.xlsx  PRODUCCIÓN DE ENERGÍA_MAYO 2025.xlsx  PRODUCCIÓN DE ENERGÍA_NOVIEMBRE 2025.xlsx  PRODUCCIÓN DE ENERGÍA_OCTUBRE 2025.xlsx  PRODUCCIÓN DE ENERGÍA_SETIEMBRE 2025.xlsx  balance 2025.xlsx
data_mart/: balance_perfil_mensual.csv  balance_r_mensual.csv  contratos_base.csv  contratos_riesgo.csv  generacion_mensual.csv  hidro_caudal_mensual.csv  hidro_volumen_mensual.csv  ingresos_mensual.csv  metadata.json  precio_medio_mensual.csv  represas_diario.csv  ventas_mensual_mwh.csv  ventas_mensual_soles.csv
data_reference/: centrales_egasa.csv
etl/: __init__.py  __main__.py  config.py  debug_sources.py  logging_utils.py  quality_checks.py  run_etl.py  schemas.py  utils_cleaning.py  utils_io.py
frontend/: README.md  index.tsx  package-lock.json  package.json  tsconfig.json
pages/: 01_Resumen_Ejecutivo.py  02_Generacion_Mensual.py  03_Generacion_15min.py  04_Hidrologia_Mensual.py  07_Facturacion.py  (+4 more)
(+20 files in other folders)
